[package]
name = "dioxus-rendering-problem-in-alpha-showcase"
version = "0.1.0"
authors = ["niedzwiedzw <niedzwiedzwo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "b97e607aca0bd8a12971fcf403908addf9a45dd7", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
